tests/transpiler/x/swift/closure.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden2846850477/008/main.swift:7:8: error: cannot call value of non-function type 'Any'
5 | }
6 | let add10 = makeAdder(10)
7 | print((add10(7) as! Int))
  |        `- error: cannot call value of non-function type 'Any'
8 | 
