tests/transpiler/x/swift/closure.swift
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:51:35 GMT+7
import Foundation
func makeAdder(_ n: Int) -> Any {
    return { (x: Int) -> Int in (x + n) }
}
let add10 = makeAdder(10)
print((add10(7) as! Int))
